--- a/app/templates/settings.html
+++ b/app/templates/settings.html
@@ -120,7 +120,7 @@
 
                           <div class="col-md-6">
                             <div class="mb-3">
-                            {{ render_field(profile_form.password)}}
+                            {{ render_field(profile_form.phone_number)}}
                             </div>
                           </div>
                         </div>
