--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -162,8 +162,8 @@
               <div class="col-md-6 d-flex justify-content-center">
                 <div class="card p-4">
                   <h6 class="mb-5">Block Details</h6>
-                  <p><strong>Block Name:</strong> {{block['name']}}</p>
-                  <p><strong>Zone Name:</strong> {{zone}}</p>
+                  <p><strong>Block Name:</strong> {{meeting_block}}</p>
+                  <p><strong>Zone Name:</strong> {{meeting_zone}}</p>
                   <p><strong>The Host:</strong> {{host}}</p>
                   <p><strong>When:</strong>{{when}}</p>
                   <button
