--- a/app/templates/host.html
+++ b/app/templates/host.html
@@ -162,8 +162,8 @@
               <div class="col-md-6 d-flex justify-content-center">
                 <div class="card p-4">
                   <h6 class="mb-5">Block Details</h6>
-                  <p><strong>Block Name:</strong> {{block['name']}}</p>
-                  <p><strong>Zone Name:</strong> {{zone}}</p>
+                  <p><strong>Block Name:</strong> {{meeting_block}}</p>
+                  <p><strong>Zone Name:</strong> {{meeting_zone}}</p>
                   <p><strong>The Host:</strong> {{host}}</p>
                   <p><strong>When:</strong>{{when}}</p>
                   <button
@@ -196,7 +196,7 @@
                     style="height: 150px"
                   >
                       Dear Member, 
-                      Upcoming block is hosted by {{zone}}  and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
+                      Upcoming block is hosted by {{meeting_zone}}  and the host is {{host}}. Make payment through this link: {{paymentlink}} or through the paybill : xxxxxx Account Number: Your Phone Number."
   
                       </textarea
                   >
