--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,6 +24,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../static/tabpay_css/dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -89,16 +93,27 @@
         >
           <i class="bi bi-grid-fill"></i> Dashboard
         </a>
+        {% if current_user.has_role('SuperUser') or
+        current_user.has_role('Admin') %}
         <a
-          href="{{ url_for('main.manage_contribution') }}"
-          class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
-          ><i class="bi bi-currency-exchange"></i> Contribute</a
+          href="{{ url_for('main.committee') }}"
+          class="{% if request.endpoint == 'main.committee' %}active{% endif %}"
         >
+          <i class="fas fa-users"></i> Committee
+        </a>
+        {% endif %}
+
         <a
           href="{{ url_for('main.host') }}"
           class="{% if request.endpoint == 'main.host' %}active{% endif %}"
           ><i class="bi bi-house-fill"></i> Host</a
         >
+        <a
+          href="{{ url_for('main.manage_contribution') }}"
+          class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
+          ><i class="bi bi-currency-exchange"></i> Contribute</a
+        >
+
         <a
           href="{{ url_for('main.block_reports') }}"
           class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
@@ -138,16 +153,27 @@
               >
                 <i class="bi bi-grid-fill"></i> Dashboard
               </a>
+              {% if current_user.has_role('SuperUser') or
+              current_user.has_role('Admin') %}
               <a
-                href="{{ url_for('main.manage_contribution') }}"
-                class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
-                ><i class="bi bi-currency-exchange"></i> Contribute</a
+                href="{{ url_for('main.committee') }}"
+                class="{% if request.endpoint == 'main.committee' %}active{% endif %}"
               >
+                <i class="fas fa-users"></i> Committee
+              </a>
+              {% endif %}
+
               <a
                 href="{{ url_for('main.host') }}"
                 class="{% if request.endpoint == 'main.host' %}active{% endif %}"
                 ><i class="bi bi-house-fill"></i> Host</a
               >
+              <a
+                href="{{ url_for('main.manage_contribution') }}"
+                class="{% if request.endpoint == 'main.manage_contribution' %}active{% endif %}"
+                ><i class="bi bi-currency-exchange"></i> Contribute</a
+              >
+
               <a
                 href="{{ url_for('main.block_reports') }}"
                 class="{% if request.endpoint == 'main.block_reports' %}active{% endif %}"
@@ -210,5 +236,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
