fix xxl breakpoint

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -132,7 +132,7 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-xxl">
       <div class="row">
         <div class="col-lg-2 d-flex -flex-column">
           <!-- Sidebar for larger screens -->
