modify committee logic and fix index.html display for xxl

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="../static/tabpay_css/index.css" />
   </head>
   <body>
-    <div class="container-fluid-lg">
+    <div class="container-xxl">
       <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
         <div class="container-fluid" style="background-color: whitesmoke">
           <!-- Logo: Always stays on the left -->
