--- a/app/templates/security/base.html
+++ b/app/templates/security/base.html
@@ -48,9 +48,10 @@
     {% block body -%}
       {% block navbar %}
       {%- endblock navbar %}
+      <div class="container-xxl">
       {% block content -%}
       {%- endblock content %}
-
+      </div>
       {% block scripts %}
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
       {%- endblock scripts %}
