--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -1,56 +1,51 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
 render_field_with_errors, render_field, render_field_errors, render_form_errors
-%}
-{% block title %}Tabpay | Forgot Password {% endblock %}
-
-{% block content %}
-<div class="container-fluid">
-  <div class="main-container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="image-section"></div>
-      </div>
-      <div class="col-lg-6">
-        <div class="head-form">
-          <div class="p-4">
-            <h1>Forgot Password</h1>
-            <p>New Password</p>
-          </div>
-          <hr />
-          {% with messages = get_flashed_messages(with_categories=true) %} {% if
-          messages %}
-          <div class="container mt-3" id="flash-container">
-            {% for category, message in messages %}
-            <div
-              class="alert alert-{{ category }} alert-dismissible fade show"
-              role="alert"
-            >
-              {{ message }}
-            </div>
-            {% endfor %}
-          </div>
-          {% endif %} {% endwith %}
-          <form
-            action="{{ url_for_security('forgot_password') }}"
-            method="post"
-            name="forgot_password_form"
-          >
-            {{ forgot_password_form.hidden_tag() }} {{
-            render_form_errors(forgot_password_form) }}
-
-            <div class="form-section">
-              <div>
-                {{
-                render_field_with_errors(forgot_password_form.email,class="input",placeholder="hello@reallygreatsite.com")
-                }}
-              </div>
-              <div class="d-flex justify-content-center">
-                {{ render_field_errors(forgot_password_form.csrf_token) }} {{
-                render_field(forgot_password_form.submit,class="button") }}
-              </div>
-            </div>
-          </form>
+%} {% block title %}Tabpay | Forgot Password {% endblock %} {% block content %}
+<div class="main-container">
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="image-section"></div>
+    </div>
+    <div class="col-lg-6">
+      <div class="head-form">
+        <div class="p-4">
+          <h1>Forgot Password</h1>
+          <p>New Password</p>
         </div>
+        <hr />
+        {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %}
+        <div class="container mt-3" id="flash-container">
+          {% for category, message in messages %}
+          <div
+            class="alert alert-{{ category }} alert-dismissible fade show"
+            role="alert"
+          >
+            {{ message }}
+          </div>
+          {% endfor %}
+        </div>
+        {% endif %} {% endwith %}
+        <form
+          action="{{ url_for_security('forgot_password') }}"
+          method="post"
+          name="forgot_password_form"
+        >
+          {{ forgot_password_form.hidden_tag() }} {{
+          render_form_errors(forgot_password_form) }}
+
+          <div class="form-section">
+            <div>
+              {{
+              render_field_with_errors(forgot_password_form.email,class="input",placeholder="hello@reallygreatsite.com")
+              }}
+            </div>
+            <div class="d-flex justify-content-center">
+              {{ render_field_errors(forgot_password_form.csrf_token) }} {{
+              render_field(forgot_password_form.submit,class="button") }}
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
