--- a/app/templates/security/register_user.html
+++ b/app/templates/security/register_user.html
@@ -1,78 +1,73 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
 render_field_with_errors, render_field, render_form_errors, render_field_errors
-%} 
-{% block title %}Tabpay | Register {% endblock %}
-
-{% block content %}
-<div class="container-fluid">
-  <div class="main-container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="image-section"></div>
-      </div>
-      <div class="col-lg-6">
-        <div class="head-form">
-          <div class="p-3">
-            <h1>
-              Create new <br />
-              Account
-            </h1>
-            <p>
-              Already Registered?
-              <a
-                href="{{ url_for('security.login') }}"
-                style="text-decoration: none; color: #3fb411"
-                >Login</a
-              >
-            </p>
-          </div>
-          <hr />
-          {% with messages = get_flashed_messages(with_categories=true) %} {% if
-          messages %}
-          <div class="container mt-3" id="flash-container">
-            {% for category, message in messages %}
-            <div
-              class="alert alert-{{ category }} alert-dismissible fade show"
-              role="alert"
+%} {% block title %}Tabpay | Register {% endblock %} {% block content %}
+<div class="main-container">
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="image-section"></div>
+    </div>
+    <div class="col-lg-6">
+      <div class="head-form">
+        <div class="p-3">
+          <h1>
+            Create new <br />
+            Account
+          </h1>
+          <p>
+            Already Registered?
+            <a
+              href="{{ url_for('security.login') }}"
+              style="text-decoration: none; color: #3fb411"
+              >Login</a
             >
-              {{ message }}
-            </div>
-            {% endfor %}
-          </div>
-          {% endif %} {% endwith %}
-          <form
-            action="{{ url_for('security.register') }}"
-            method="post"
-            name="form"
-          >
-            {{ register_user_form.hidden_tag() }} {{
-            render_form_errors(register_user_form) }}
-            <div class="form-section">
-              <div>
-                {{ render_field_with_errors(register_user_form.full_name,
-                class="input") }}
-              </div>
-              <div>
-                {{ render_field_with_errors(register_user_form.email,
-                class="input") }}
-              </div>
-              <div>
-                {{ render_field_with_errors(register_user_form.password,
-                class="input") }}
-              </div>
-              <div>
-                {{ render_field_with_errors(register_user_form.id_number,
-                class="input") }}
-              </div>
-              <div>
-                <div class="d-flex justify-content-center">
-                  {{ render_field_errors(register_user_form.csrf_token) }} {{
-                  render_field(register_user_form.submit, class="button") }}
-                </div>
-              </div>
-            </div>
-          </form>
+          </p>
         </div>
+        <hr />
+        {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %}
+        <div class="container mt-3" id="flash-container">
+          {% for category, message in messages %}
+          <div
+            class="alert alert-{{ category }} alert-dismissible fade show"
+            role="alert"
+          >
+            {{ message }}
+          </div>
+          {% endfor %}
+        </div>
+        {% endif %} {% endwith %}
+        <form
+          action="{{ url_for('security.register') }}"
+          method="post"
+          name="form"
+        >
+          {{ register_user_form.hidden_tag() }} {{
+          render_form_errors(register_user_form) }}
+          <div class="form-section">
+            <div>
+              {{ render_field_with_errors(register_user_form.full_name,
+              class="input") }}
+            </div>
+            <div>
+              {{ render_field_with_errors(register_user_form.email,
+              class="input") }}
+            </div>
+            <div>
+              {{ render_field_with_errors(register_user_form.password,
+              class="input") }}
+            </div>
+            <div>
+              {{ render_field_with_errors(register_user_form.id_number,
+              class="input") }}
+            </div>
+            <div>
+              <div class="d-flex justify-content-center">
+                {{ render_field_errors(register_user_form.csrf_token) }} {{
+                render_field(register_user_form.submit, class="button") }}
+              </div>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
