--- a/app/templates/security/send_confirmation.html
+++ b/app/templates/security/send_confirmation.html
@@ -1,52 +1,48 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
-render_field_with_errors, render_field %}
-{% block title %}Tabpay | Confirm Email {% endblock %}
-
-{% block content %}
-<div class="container-fluid">
-  <div class="main-container">
-    <div class="row">
-      <div class="col-lg-6">
-        <div class="image-section"></div>
-      </div>
-      <div class="col-lg-6">
-        <div class="head-form">
-          <div class="p-4">
-            <h1>{{ _fsdomain('Resend confirmation instructions') }}</h1>
-          </div>
-          <hr />
-          {% with messages = get_flashed_messages(with_categories=true) %} {% if
-          messages %}
-          <div class="container mt-3" id="flash-container">
-            {% for category, message in messages %}
-            <div
-              class="alert alert-{{ category }} alert-dismissible fade show"
-              role="alert"
-            >
-              {{ message }}
-            </div>
-            {% endfor %}
-          </div>
-          {% endif %} {% endwith %}
-          <form
-            action="{{ url_for_security('send_confirmation') }}"
-            method="post"
-            name="send_confirmation_form"
-          >
-            {{ send_confirmation_form.hidden_tag() }}
-
-            <div class="form-section">
-              <div>
-                {{ render_field_with_errors(send_confirmation_form.email,
-                class="input") }}
-              </div>
-              <div class="d-flex justify-content-center">
-                {{ render_field(send_confirmation_form.submit,
-                class="confirm-button") }}
-              </div>
-            </div>
-          </form>
+render_field_with_errors, render_field %} {% block title %}Tabpay | Confirm
+Email {% endblock %} {% block content %}
+<div class="main-container">
+  <div class="row">
+    <div class="col-lg-6">
+      <div class="image-section"></div>
+    </div>
+    <div class="col-lg-6">
+      <div class="head-form">
+        <div class="p-4">
+          <h1>{{ _fsdomain('Resend confirmation instructions') }}</h1>
         </div>
+        <hr />
+        {% with messages = get_flashed_messages(with_categories=true) %} {% if
+        messages %}
+        <div class="container mt-3" id="flash-container">
+          {% for category, message in messages %}
+          <div
+            class="alert alert-{{ category }} alert-dismissible fade show"
+            role="alert"
+          >
+            {{ message }}
+          </div>
+          {% endfor %}
+        </div>
+        {% endif %} {% endwith %}
+        <form
+          action="{{ url_for_security('send_confirmation') }}"
+          method="post"
+          name="send_confirmation_form"
+        >
+          {{ send_confirmation_form.hidden_tag() }}
+
+          <div class="form-section">
+            <div>
+              {{ render_field_with_errors(send_confirmation_form.email,
+              class="input") }}
+            </div>
+            <div class="d-flex justify-content-center">
+              {{ render_field(send_confirmation_form.submit,
+              class="confirm-button") }}
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
