--- a/app/static/tabpay_css/index.css
+++ b/app/static/tabpay_css/index.css
@@ -7,6 +7,7 @@ html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  padding: 20px;
 }
 .feature-card {
   position: relative; /* Needed for absolute positioning of the icon */
