--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -18,7 +18,7 @@ prop_next %} {% block title %}Tabpay | Login {% endblock %} {% block content %}
         <div class="container mt-3" id="flash-container">
           {% for category, message in messages %}
           <div
-            class="alert alert-{{ category }} alert-dismissible fade show bg-info"
+            class="alert alert-{{ category }} alert-dismissible fade show "
             role="alert"
           >
             {{ message }}
