--- a/app/templates/security/forgot_password.html
+++ b/app/templates/security/forgot_password.html
@@ -1,6 +1,7 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
 render_field_with_errors, render_field, render_field_errors, render_form_errors
-%} {% block title %}Tabpay | Forgot Password {% endblock %} {% block content %}
+%} {% block title %}Forgot Password | TabPay {% endblock title %} {% block
+content %}
 <div class="main-container">
   <div class="row">
     <div class="col-lg-6">
