--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -1,6 +1,6 @@
 {% extends "security/base.html" %} {% from "security/_macros.html" import
 render_field_with_errors, render_field, render_form_errors, render_field_errors,
-prop_next %} {% block title %}Tabpay | Login {% endblock %} {% block content %}
+prop_next %} {% block title %}Login | TabPay {% endblock %} {% block content %}
 <div class="main-container">
   <div class="row">
     <div class="col-lg-6">
