--- a/app/templates/security/send_confirmation.html
+++ b/app/templates/security/send_confirmation.html
@@ -1,6 +1,6 @@
 {% extends 'security/base.html' %} {% from "security/_macros.html" import
-render_field_with_errors, render_field %} {% block title %}Tabpay | Confirm
-Email {% endblock %} {% block content %}
+render_field_with_errors, render_field %} {% block title %}Confirm Email |
+TabPay {% endblock %} {% block content %}
 <div class="main-container">
   <div class="row">
     <div class="col-lg-6">
